copluk/copluk2/grammar-kesin.txt
//program kucuk harf buyukharf ilgilenmemeli hepsini kucuge cevirmeli

PROGRAM: STATEMENT_LIST EOF;

STATEMENT_LIST: STATEMENT | STATEMENT_LIST SEMICOLON STATEMENT;

STATEMENT: ASSIGN_STMT | IF_STMT | WHILE_STMT | EXPRESSION_STMT | BLOCK_STMT;

ASSIGN_STMT: VARIABLE ASSIGN EXPRESSION;

VARIABLE: IDENTIFIER;

EXPRESSION_STMT: EXPRESSION;

EXPRESSION: TERM ((ADD | SUB) TERM)*;

TERM: FACTOR ((MUL | DIV) FACTOR)*;

FACTOR: VARIABLE | NUMBER | LPAREN EXPRESSION RPAREN;

COMPARISON: EXPRESSION COMPARISON_OP EXPRESSION;

EQ: '==';

NEQ: '!=';

LT: '<';

GT: '>';

LTE: '<=';

GTE: '>=';

IF_STMT: IF_CLAUSE THEN_STMT END_STMT;

IF_CLAUSE: 'eğer' LPAREN COMPARISON RPAREN;

THEN_STMT: STATEMENT_LIST;

END_STMT: 'son';

WHILE_STMT: WHILE_CLAUSE DO_STMT END_STMT;

WHILE_CLAUSE: 'döngü' LPAREN COMPARISON RPAREN;

DO_STMT: STATEMENT_LIST;

BLOCK_STMT: LBRACE STATEMENT_LIST RBRACE;

SEMICOLON: ';';

COMMA: ',';

LPAREN: '(';

RPAREN: ')';

LBRACE: '{';

RBRACE: '}';

ADD: '+';

SUB: '-';

MUL: '*';

DIV: '/';

COMMENT: '--' ~[\r\n]* '\r'? '\n';

WS: [ \t\r\n]+ -> skip;

IDENTIFIER: [a-zA-Z] [a-zA-Z0-9]*;

NUMBER: [0-9]+ ('.' [0-9]+)?;
